fix: sponsors titles on small screens

--- a/asset/style/sponsor.css
+++ b/asset/style/sponsor.css
@@ -10,8 +10,12 @@
     display: inline-flex;
 }
 
-h2::before {
+h2::before,
+h2::after {
     content: "――――――";
+}
+
+h2::before {
     padding-right: 20px;
     background: linear-gradient(to left, var(--color), transparent);
     -webkit-background-clip: text;
@@ -20,16 +24,21 @@ h2::before {
 }
 
 h2::after {
-    content: "――――――";
     padding-left: 20px;
     background: linear-gradient(to right, var(--color), transparent);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+    overflow: hidden;
 }
 
 @media (max-width: 700px) {
     .names {
         width: 100%;
+    }
+
+    h2::before,
+    h2::after {
+        content: "―――";
     }
 }
